syntax = "proto3";
package saonetwork.sao.did;

option go_package = "github.com/SaoNetwork/sao/x/did/types";

message AccountList {
  string did = 1; 
  repeated string accountDids = 2; 
  
}

